# imu_gps_ws

./: .gitignore  start.sh  start_imu.sh  start_smc.sh
13_09_16_july/: 13_09_16_july_0.db3  metadata.yaml
hill_driving/: hill_driving.db3  metadata.yaml
normal_driving/: metadata.yaml  normal_driving.db3
rosbag2_2025_07_21-03_46_12/: metadata.yaml
rosbag2_2025_07_21-03_55_51/: metadata.yaml
rosbag2_2025_07_23-14_27_36/: metadata.yaml
rosbag2_2025_07_23-14_32_35/: metadata.yaml
rosbag2_2025_07_23-14_36_09/: metadata.yaml
rosbag2_2025_07_23-16_35_11/: metadata.yaml
short_road_driving/: metadata.yaml  short_road_driving.db3
src/imu_gps_localization/: CMakeLists.txt  gps.csv  state.csv
src/imu_gps_localization/config/: config.yaml
src/imu_gps_localization/imu_gps_localizer/src/: imu_gps_localizer.cpp
src/imu_gps_localization/launch/: imu_gps_localizer.launch
src/imu_gps_localization/ros_wrapper/launch/: imu_gps_localization.launch
src/imu_gps_sync_cmake/: CMakeLists.txt  package.xml
src/imu_gps_sync_cmake/src/: gps_repub.cpp  imu_gps_sync.cpp
src/imu_gps_sync_py/: package.xml  setup.cfg  setup.py
src/imu_gps_sync_py/config/: ekf_global.yaml  ekf_local.yaml  ekf_localization.yaml  ekf_simple.yaml  navsat_transform.yaml
src/imu_gps_sync_py/imu_gps_sync_py/: gps_imu_sync.py  gps_path_pub.py  gps_repub.py  gps_to_csv.py  gps_to_point.py  gps_to_web.py  gps_with_grid.py  imu_repub.py  imu_to_csv.py
src/imu_gps_sync_py/launch/: gps_display.launch.py  robot_localization.launch.py
src/mygps/: CMakeLists.txt  package.xml
src/mygps/launch/: mygps.launch
src/mygps/scripts/: gps_timestamp_republisher.py  sync.py
stop_state/: metadata.yaml  stop_state.db3
(+2 files in other folders)
